# plexsim-initializer

./: .gitignore  LICENSE  README-Solver.md  README.md  environment.yaml  pyproject.toml  requirements.txt
apptainer/: .gitignore  base.def  base_0.def  base_1.def  base_2.def  plexsim_initializer.def  slurm_run.sh
examples/common/: Valid_Coords 생성.ipynb  constant_induced_field_center_coords.npy
examples/maxwellian/: config.yaml  config_cartesian.yaml  config_cylindrical.yaml
examples/maxwellian/data/input-cylindrical/: B_cyl.npy  B_ind_cyl.npy  E_ind_cyl.npy  J.npy  Te.npy  Ti.npy  ne.npy  ni.npy
examples/maxwellian/data/input-cylindrical-39915/: B_cyl.npy  J.npy  J_ext_yee.npy  Ti.npy  ne.npy
examples/maxwellian/data/new-consistent-input-reduced-external/: B.npy  Ti.npy  ne.npy  ni.npy  note.txt
examples/maxwellian/data/new-input-reduced-merged-newbdry/: B_merged.npy  B_merged_center.npy  J.npy  Te.npy  constant_external_field_center_coords.npy  constant_external_field_node_coords.npy  constant_induced_field_node_coords.npy  new_B_plasma_3d.npy  new_B_plasma_3d_center.npy  (+2 more)
examples/random/: config.yaml  config_cartesian.yaml  config_cylindrical.yaml
plexsim_initializer/: __main__.py
plexsim_initializer/backends/: __init__.py
plexsim_initializer/backends/local/: sim.py
plexsim_initializer/backends/mpi/: common.py  maxwellian.py  random.py  sim.py
plexsim_initializer/initializers/: __init__.py  base.py  cartesian.py  cylindrical.py  maxwellian.py  random.py
plexsim_initializer/lib/: cartesian.py  common.py  cylindrical.py  gilbert3d.py
